# bokeh

./: .dockerignore  .gitignore  Caddyfile.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
frontend/: Dockerfile  package.json  svelte.config.js
frontend/app/: globals.css  page.module.css  page.tsx
frontend/app/register/: page.module.css  page.tsx
frontend/src/: app.html  service-worker.js
frontend/src/lib/components/: Modal.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/2023-03-11-050310_create_user/: up.sql
migrations/2023-03-11-050323_create_media/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs  utils.rs
src/endpoints/: admin.rs  media.rs  mod.rs  user.rs
