[package]
edition = "2021"
name = "bokeh"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.10", features = ["multipart", "json", "headers"]}
chrono = {version = "0.4.23", features = ["serde"]}
diesel = {version = "2.0.3", features = ["uuid", "chrono", "postgres"]}
diesel-async = {version = "0.2.1", features = ["postgres", "bb8"]}
diesel_migrations = {version = "2.0.0", features = ["postgres"]}
infer = "0.13.0"
rand = "0.8.5"
serde = {version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = {version = "1.3.0", features = ["serde"]}
